refactor: Update situacao handling in subprocessos and related tests